Update Wine Quality .ipynb

--- a/Wine Quality .ipynb
+++ b/Wine Quality .ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6361e024",
+   "id": "5becf6ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0ac3156b",
+   "id": "d2c74c9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "3d38f6e8",
+   "id": "bc98276c",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d5dee371",
+   "id": "fdc43a82",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "51b276f3",
+   "id": "ee8d669b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "16dc2a23",
+   "id": "dad2dc28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "4e828060",
+   "id": "1c49ce62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3bf4f1e0",
+   "id": "c14ca470",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "53213aac",
+   "id": "f6966082",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "439c3b1b",
+   "id": "5bbcd161",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "c91dae7b",
+   "id": "93506115",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "3f39f077",
+   "id": "ee218350",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "cc78241d",
+   "id": "87cf139a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "b221600a",
+   "id": "15b065e6",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "7d81792a",
+   "id": "63b5e30b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "080ecdc2",
+   "id": "924a0cff",
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "e5cfa28f",
+   "id": "981f2b0c",
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "ae0cc5ac",
+   "id": "1e8cb13d",
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "30e8ba89",
+   "id": "72547565",
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "da3ae206",
+   "id": "ad23022f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "09694417",
+   "id": "7ea057e6",
    "metadata": {},
    "outputs": [
     {
@@ -666,12 +666,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "id": "aa378264",
+   "execution_count": 143,
+   "id": "f110f987",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import r2_score"
@@ -679,31 +679,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
-   "id": "74ad6bea",
+   "execution_count": 144,
+   "id": "4e537ca1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RandomForestRegressor()"
+       "RandomForestClassifier()"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lr=RandomForestRegressor()\n",
+    "lr=RandomForestClassifier()\n",
     "X_train,X_test,Y_train,Y_test = train_test_split(X,Y,random_state=0,test_size=0.3)\n",
     "lr.fit(X_train,Y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
-   "id": "40c6a075",
+   "execution_count": 145,
+   "id": "289feadd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,15 +712,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
-   "id": "87fcb5b2",
+   "execution_count": 146,
+   "id": "3f8f0104",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9794148286960006\n"
+      "0.9779039440029751\n"
      ]
     }
    ],
